[package]
name = "log_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdrollback = { path = ".." }
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
indoc = "2.0"
rand = "0.8.5"
chrono = { version = "0.4" }
itertools = { version = "0.12" }
egui = { version = "0.26.2" }
egui-phosphor = { version = "0.4.0", default-features = false, features = ["fill"] }
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
